fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/FEC_Collection_Interaction__c.object-meta.xml
<CustomObject>
    <label>Collection Interaction</label>
    <nameField>
        <displayFormat>CIN - {0}</displayFormat>
        <label>Collection Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Interaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>