fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Due_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Due_Reason__c</fullName>
    <label>Due Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>