fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Interacted_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Agent_ID__c</fullName>
    <label>Interacted Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>