fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Interacted_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Code__c</fullName>
    <label>Interacted Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>