fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Interacted_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Date__c</fullName>
    <label>Interacted Date</label>
    <type>Date</type>
</CustomField>