fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Interacted_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Phone__c</fullName>
    <label>Interacted Phone</label>
    <type>Phone</type>
</CustomField>