fecdat/force-app/main/default/objects/FEC_Collection_Interaction__c/fields/FEC_Promised_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Promised_Repayment_Amount__c</fullName>
    <label>Promised Repayment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>